# pixelator_course_project

./: CMakeLists.txt  README.md
Pixelator/: CMakeLists.txt  source.cpp  source.report.md.in.txt
bin.dbg/: source
bin.rel/: source  source.report.md
